<resources>
    <string name="app_name">MessageApp</string>
    <string name="log_in_text">Log In</string>
    <string name="register_text">Register</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_registered">Already registered?</string>
    <string name="press_here_to_sign_in">Press Here to sign in</string>
    <string name="what_i_do">What I do</string>
    <string name="sign_in">SIGN IN</string>
    <string name="aren_t_registered_yet">Aren\'t registered yet?</string>
    <string name="press_here_to_register">Press Here to register</string>
    <string name="search">Search</string>
    <string name="home">HOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="update">UPDATE</string>
    <string name="profession">Profession</string>
    <string name="username">Username</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="dummy_message">Dummy Message: wubba lubba dub dub</string>
    <string name="dummy_time">1h</string>
    <string name="dummy_profession">Android Developer</string>
    <string name="type_your_message">Type your message</string>
    <string name="dummy_message_time">04:20</string>
</resources>