<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.RegisterActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/forms_horizontal_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/register_avatar"
            android:layout_width="@dimen/forms_avatar_size"
            android:layout_height="@dimen/forms_avatar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/forms_avatar_margin_top"
            android:layout_marginBottom="@dimen/forms_avatar_margin_bot"
            android:src="@drawable/avatar_image_placeholder"/>

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_edit_text_height"
            android:background="@drawable/edit_text_bg"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:hint="@string/enter_your_username"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_edit_text_height"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_your_password"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/register_profession"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forms_edit_text_height"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/what_i_do"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:layout_marginBottom="@dimen/default_margin_medium"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="@dimen/sign_up_width"
            android:layout_height="@dimen/sign_up_height"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:backgroundTint="@color/purple_500"
            android:onClick="registerClicked"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_here_to_sign_in"
            android:layout_gravity="center"
            android:clickable="true"
            android:textColor="@color/purple_500"
            android:focusable="true"
            android:onClick="pressToSignInClicked"/>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>