<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn.LoginActivity"
    android:backgroundTint="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/forms_horizontal_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/forms_avatar_size"
            android:layout_height="@dimen/forms_avatar_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/forms_avatar_margin_top"
            android:layout_marginBottom="@dimen/forms_avatar_margin_bot"
            android:src="@drawable/avatar_image_placeholder"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/enter_your_username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="@dimen/sign_up_width"
            android:layout_height="@dimen/sign_up_height"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:backgroundTint="@color/purple_500"
            android:onClick="singInClicked"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aren_t_registered_yet"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/press_here_to_register"
            android:textColor="@color/purple_500"
            android:onClick="pressToSignUpClicked" />

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>