<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/forms_horizontal_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/forms_avatar_size"
                android:layout_height="@dimen/forms_avatar_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="@dimen/forms_avatar_margin_bot"
                android:src="@drawable/avatar_image_placeholder"/>

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:background="@drawable/edit_text_bg"
                android:gravity="center"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edit_profession"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/default_margin_small"
                android:background="@drawable/edit_text_bg"
                android:gravity="center"
                android:hint="@string/profession"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/update_buttom"
                android:layout_width="@dimen/sign_up_width"
                android:layout_height="@dimen/sign_up_height"
                android:layout_gravity="center"
                android:text="@string/update"
                android:backgroundTint="@color/purple_500"
                android:onClick="updateClicked"
                />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="@dimen/sign_up_width"
                android:layout_height="@dimen/sign_up_height"
                android:layout_gravity="center"
                android:text="@string/sign_out"
                android:backgroundTint="@color/icon_grey"
                android:onClick="signOutClicked"
                />

        </LinearLayout>

    </ScrollView>
</FrameLayout>