<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:paddingVertical="@dimen/default_margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_margin_small">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="@dimen/default_icon_size_small"
                android:layout_height="@dimen/default_icon_size_small"
                android:layout_gravity="center"
                android:focusable="true"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                android:onClick="backButtonClicked"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/chat_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/chat_list_item_username_size" />

                <TextView
                    android:id="@+id/chat_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_profession"
                    android:textColor="@color/edit_text_color"
                    android:textSize="@dimen/default_text_size_small" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/chat_avatar_size"
                android:layout_height="@dimen/chat_avatar_size"
                android:src="@drawable/avatar_image_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/default_margin_small"
        app:layout_constraintBottom_toTopOf="@+id/chat_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_app_bar_layout"
        app:stackFromEnd="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chat_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/default_margin_small"
        android:layout_marginTop="@dimen/default_margin_small"
        android:hint="@string/type_your_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chat_message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin_small"
            android:background="@drawable/message_box_bg"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>